split Dashboard component for container and presentational components

--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -1,6 +1,8 @@
-.pagination-button {
-  &--selected {
-    pointer-events: none;
-    background-color: #ADD8E6;
+.pagination {
+  &__button {
+    &--selected {
+      pointer-events: none;
+      background-color: #ADD8E6;
+    }
   }
 }
