--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -1,3 +1,21 @@
 .dashboard {
+  margin: 0 50px;
   text-align: center;
+
+  > * {
+    margin: 20px 0;
+  }
 }
+
+@media only screen and (max-width: 1024px) {
+  .dashboard {
+    margin: 0 20px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .dashboard {
+    margin: 0;
+  }
+}
+
