--- a/src/components/peopleOverview/peopleOverview.scss
+++ b/src/components/peopleOverview/peopleOverview.scss
@@ -1,4 +1,4 @@
-.dashboard {
+.people-overview {
   margin: 0 50px;
   text-align: center;
 
@@ -8,13 +8,13 @@
 }
 
 @media only screen and (max-width: 1024px) {
-  .dashboard {
+  .people-overview {
     margin: 0 20px;
   }
 }
 
 @media only screen and (max-width: 480px) {
-  .dashboard {
+  .people-overview {
     margin: 0;
   }
 }
